Preparations for publishing.

--- a/qtc_packaging/debian_harmattan/changelog
+++ b/qtc_packaging/debian_harmattan/changelog
@@ -2,4 +2,4 @@ webradio (0.0.1) unstable; urgency=low
 
   * Initial Release.
 
- -- unknown <>  Sun, 15 Apr 2012 13:22:59 +0400
+ -- flood4life <flood4life@unknown>  Sat, 09 Jun 2012 20:57:31 +0400
