--- a/qtc_packaging/debian_harmattan/README
+++ b/qtc_packaging/debian_harmattan/README
@@ -3,4 +3,4 @@ The Debian Package webradio
 
 Comments regarding the Package
 
- -- unknown <>  Sun, 15 Apr 2012 13:22:59 +0400
+ -- flood4life <flood4life@unknown>  Sat, 09 Jun 2012 20:57:31 +0400
